--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <button type="submit">Submit</button>
   </form>
 </section>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="script.js"></script>
 <!-- Footer -->
 <footer>
